fix ReviewService, ProductResponse and ProductMapper to show review counts and rating correctly