@@ -10,6 +10,7 @@ import com.example.monsterShop.repositories.ReviewRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ReviewService {
@@ -21,7 +22,7 @@ public class ReviewService {
         this.productRepository = productRepository;
     }
 
-    public ReviewResponse addReview(ReviewRequest reviewRequest){
+   public ReviewResponse addReview(ReviewRequest reviewRequest){
         Product foundProduct = productRepository.findById(reviewRequest.productId())
                 .orElseThrow(() -> new IllegalArgumentException("Product not found"));
         Review newReview = ReviewMapper.dtoToEntity(reviewRequest, foundProduct);
@@ -31,6 +32,6 @@ public class ReviewService {
 
     public List<ReviewResponse> getReviewsByProductId(Long productId) {
         List<Review> reviews = reviewRepository.findByProductId(productId);
-        return reviews.stream().map(review -> ReviewMapper.entityToDto(review)).toList();
-    }
-}
+        return reviews.stream().map(review -> ReviewMapper.entityToDto(review)).collect(Collectors.toList());
+
+}}
